# libtailscale

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  build.rs
.claude/: session-start.sh
.github/workflows/: build-wheels.yml  rust.yml
examples/: client.rs  echo.rs  logging_demo.rs
python/: .gitignore  Makefile  pyproject.toml
python/src/: main.cpp
python/tests/: test_smoke.py
src/: lib.rs  sys.rs  tailscale.rs
